no changes- added and removed nswag.aspnetcore package

--- a/SampleSwagger/SampleSwaggerApi - Backup.csproj
+++ b/SampleSwagger/SampleSwaggerApi - Backup.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.18" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="NSwag.ApiDescription.Client" Version="14.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,8 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
-	<ItemGroup>
-		<OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" Namespace="SampleSwagger.Endpoints" ClassName="SwaggerAPIClient" Link="swagger.json" />
-	</ItemGroup>
+  <ItemGroup>
+    <OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" Namespace="SampleSwagger.Endpoints" ClassName="SwaggerAPIClient" Link="swagger.json" />
+  </ItemGroup>
 
 </Project>
