--- a/SampleSwagger/appsettings.json
+++ b/SampleSwagger/appsettings.json
@@ -3,10 +3,24 @@
     "ExpirationMinutes": 60,
     "SigningKey": "hello000000000000000000000000000000000000000000"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "..\\logs\\api\\log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "Your ASP.NET Core App"
     }
   },
   "AllowedHosts": "*"
